<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="about">About</string>
    <string name="about_text">"HotdogEd is a tool to for those who wants to read fido and nntp on Android devices.
 
 Documentation can be found here:
 http://hotdoged.propush.ru/docs
 
 Please read the FAQ if you have some difficulties:
 http://hotdoged.propush.ru/faq
 
 Support info can be found here:
 http://hotdoged.propush.ru/support
 
 Thanks to:
 - Ivan Agarkov AKA 2:5020/848 AKA /849 for a mailer and tosser called jNode - fido feed provider is based upon it's code.
 - Evgenii Maletin AKA 2:5020/2140.140 for Kubik for Windows - with it's help I was able to debug with less efforts.
 - Alexey Vissarionov AKA 2:5020/545 for support and kompot :).
 - For all testers who responded and sent bug-reports.
"</string>
    <string name="action_settings">Settings</string>
    <string name="active_server">Active server</string>
    <string name="add">Add...</string>
    <string name="add_from_camera">Add from camera</string>
    <string name="add_from_gallery">Add from gallery</string>
    <string name="add_image_above">Add image above...</string>
    <string name="add_image_below">Add image below...</string>
    <string name="add_more_conditions">Add more conditions...</string>
    <string name="additional_url_info">Additional URL info</string>
    <string name="address_book">Address book</string>
    <string name="always_show_starred_articles">Always show starred articles</string>
    <string name="app_name">HotdogEd</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="articles_read_will_be_deleted">Read articles will be deleted at sync</string>
    <string name="asterisk">*</string>
    <string name="author">Author</string>
    <string name="backup_now">Backup now</string>
    <string name="ban">Ban</string>
    <string name="by_date">By date</string>
    <string name="by_from">By from</string>
    <string name="by_subject">By subject</string>
    <string name="by_thread">By thread</string>
    <string name="clear_to_bottom_of_part">Clear to bottom of part</string>
    <string name="clear_to_top_of_part">Clear to top of part</string>
    <string name="codepage">Codepage</string>
    <string name="custom_headers_for_edit">Custom headers for edit</string>
    <string name="default_fghi_url">http://fido.g0x.ru/?</string>
    <string name="default_nodehist_url">http://nodehist.fidonet.org.ua/?</string>
    <string name="delete_all_parts_above">Delete all quoted parts above</string>
    <string name="delete_all_parts_below">Delete all quoted parts below</string>
    <string name="delete_article">Delete article</string>
    <string name="delete_items_older_then1">Delete messages older then</string>
    <string name="descending_order">Descending order</string>
    <string name="edit">Edit</string>
    <string name="edit_scoring">Edit scoring...</string>
    <string name="empty" />
    <string name="enable_scoring">Enable scoring</string>
    <string name="fghi_uri_copy">Copy FGHI URL</string>
    <string name="first">First</string>
    <string name="first_unread">First unread</string>
    <string name="forward">Forward</string>
    <string name="ftn_address_info">FTN address info</string>
    <string name="ftn_quoting_line_size">FTN quoting line size</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="goto_article">Go to article</string>
    <string name="group_settings">Group settings</string>
    <string name="help">Help</string>
    <string name="interesting_20">Interesting (+20)</string>
    <string name="large">Large</string>
    <string name="larger">Larger</string>
    <string name="last">Last</string>
    <string name="last_unread">Last unread</string>
    <string name="layout">Layout</string>
    <string name="load_images_on_3g">Load images on 3G</string>
    <string name="manage_subscription">Manage subscription</string>
    <string name="mark_all_read">Mark all read</string>
    <string name="mark_article_unread">Mark article unread</string>
    <string name="markdown_extensions">Markdown extensions</string>
    <string name="medium">Medium</string>
    <string name="message_quoting">Message quoting</string>
    <string name="message_text_size">Message text size</string>
    <string name="messages_and_contents_auto">Mess. &amp; contents (auto)</string>
    <string name="messages_and_contents_horizontal">Mess. &amp; contents (horiz)</string>
    <string name="messages_and_contents_vertical">Mess. &amp; contents (vert)</string>
    <string name="messages_only">Messages only</string>
    <string name="messages_to_keep1">Messages to keep</string>
    <string name="new_article">New article</string>
    <string name="new_filter_group">New filter group...</string>
    <string name="next">Next</string>
    <string name="next_thread">Next thread</string>
    <string name="next_unread">Next unread</string>
    <string name="next_unread_thread">Next unread thread</string>
    <string name="nntp_quoting_line_size">NNTP quoting line size</string>
    <string name="no_sorting">No sorting</string>
    <string name="nodehist_url">Nodehist URL</string>
    <string name="not_interesting_20">Not interesting (-20)</string>
    <string name="overquoting_action">Overquoting action</string>
    <string name="overquoting_level_threshold">Overquoting level threshold</string>
    <string name="prev">Prev</string>
    <string name="prev_thread">Prev thread</string>
    <string name="prev_unread">Prev unread</string>
    <string name="process_uue">Process UUE</string>
    <string name="purge_read_articles">Purge read articles</string>
    <string name="reply">Reply</string>
    <string name="reply_in_another_group">Reply in another group</string>
    <string name="scoring">Scoring</string>
    <string name="scoring_enabled_for_group">Scoring enabled for group</string>
    <string name="search">Search...</string>
    <string name="send_unsent_items">Send unsent items</string>
    <string name="server_settings">Server settings</string>
    <string name="settings">General settings</string>
    <string name="setup_pichosting">Image hosting setup...</string>
    <string name="setup_scoring">Setup scoring...</string>
    <string name="setup_virtual_groups">Virtual groups...</string>
    <string name="share">Share</string>
    <string name="show_images">Show images</string>
    <string name="show_invisible">Show invisible</string>
    <string name="show_read">Show read</string>
    <string name="signature">Signature</string>
    <string name="skip_negative_scored_messages">Skip negative scored messages</string>
    <string name="small">Small</string>
    <string name="smaller">Smaller</string>
    <string name="sort_order">Sort order</string>
    <string name="split_part">Split part...</string>
    <string name="sync_all">Sync all</string>
    <string name="the_default_ghi_url">Default FGHI URL</string>
    <string name="thread">Thread</string>
    <string name="topic">Topic</string>
    <string name="unread_groups_only">Unread groups only</string>
    <string name="unread_negative_scoring_action">Unread negative scoring action</string>
    <string name="view_raw_article">View raw article</string>
    <string name="wrap_ftn_quoting_text_on_save">Wrap FTN msg text on save</string>
    <string name="wrap_ftn_unquoted_text">Wrap FTN unquoted text</string>
    <string name="wrap_long_subjects">Warn long subjects when editing</string>
    <string name="wrap_nntp_quoting_text_on_save">Wrap NNTP msg text on save</string>
    <string name="wrap_nntp_unquoted_text">Wrap NNTP unquoted text</string>
    <string name="your_name1">Your name</string>
</resources>